--- a/package.json
+++ b/package.json
@@ -35,14 +35,19 @@
     "lint": "eslint .",
     "lint:fix": "nr lint --fix",
     "test": "vitest",
-    "test:update": "vitest -u"
+    "test:update": "vitest -u",
+    "play:h5": "npm -C playground run dev:h5",
+    "build:h5": "pnpm build && npm -C playground run build:h5",
+    "play:mp-weixin": "npm -C playground run dev:mp-weixin",
+    "build:mp-weixin": "pnpm build && npm -C playground run build:mp-weixin"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.39.1",
+    "@antfu/eslint-config": "^0.39.3",
     "@types/node": "^20.2.3",
     "@uni-helper/vite-plugin-uni-pages": "workspace:*",
     "@uni-helper/vite-plugin-uni-router": "workspace:*",
     "@uni-helper/vite-plugin-uni-utils": "workspace:*",
+    "@vue/tsconfig": "^0.4.0",
     "bumpp": "^9.1.0",
     "eslint": "^8.41.0",
     "esno": "^0.16.3",
