--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,5 @@
 {
-  "compilerOptions": {
-    "target": "es2018",
-    "module": "esnext",
-    "lib": ["esnext"],
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "strict": true,
-    "strictNullChecks": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "skipDefaultLibCheck": true
-  },
+  "extends": "@vue/tsconfig/tsconfig.json",
   "exclude": [
     "**/dist/**",
     "**/node_modules/**",
