--- a/packages/uni-utils/package.json
+++ b/packages/uni-utils/package.json
@@ -36,6 +36,10 @@
     "stub": "unbuild --stub"
   },
   "dependencies": {
+    "debug": "^4.3.4",
     "fast-glob": "^3.2.12"
+  },
+  "devDependencies": {
+    "@types/debug": "^4.1.8"
   }
 }
