--- a/playground/package.json
+++ b/playground/package.json
@@ -62,6 +62,7 @@
     "@dcloudio/uni-cli-shared": "3.0.0-alpha-3080520230616001",
     "@dcloudio/uni-stacktracey": "3.0.0-alpha-3080520230616001",
     "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3080520230616001",
+    "@uni-helper/vite-plugins": "workspace:*",
     "vue-tsc": "^1.8.0"
   }
 }
