--- a/packages/uni-pages/package.json
+++ b/packages/uni-pages/package.json
@@ -29,7 +29,8 @@
     "types": "./dist/index.d.ts"
   },
   "files": [
-    "dist"
+    "dist",
+    "client.d.ts"
   ],
   "scripts": {
     "build": "unbuild",
