--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": "true",
+  "packageManager": "pnpm@8.6.2",
   "description": "uni-helper vite plugins for monorepo",
   "author": "Uni-Helper Team <https://github.com/uni-helper>",
   "license": "MIT",
