--- a/packages/uni-pages/package.json
+++ b/packages/uni-pages/package.json
@@ -30,11 +30,13 @@
   },
   "files": [
     "dist",
-    "client.d.ts"
+    "client.d.ts",
+    "schema.json"
   ],
   "scripts": {
-    "build": "unbuild",
-    "stub": "unbuild --stub"
+    "build": "unbuild && pnpm generate",
+    "stub": "unbuild --stub",
+    "generate": "ts-json-schema-generator -p \"./src/config/types/index.ts\" -t \"PagesConfig\" -o \"schema.json\" --no-type-check"
   },
   "dependencies": {
     "@uni-helper/uni-env": "^0.0.3",
@@ -45,6 +47,7 @@
     "json5": "^2.2.3",
     "lodash-unified": "^1.0.3",
     "magic-string": "^0.30.0",
-    "yaml": "^2.3.1"
+    "yaml": "^2.3.1",
+    "ts-json-schema-generator": "^1.2.0"
   }
 }
