--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": "true",
+  "packageManager": "pnpm@8.6.2",
   "description": "uni-helper vite plugins for monorepo",
   "author": "Uni-Helper Team <https://github.com/uni-helper>",
   "license": "MIT",
@@ -37,9 +38,14 @@
     "test": "vitest",
     "test:update": "vitest -u",
     "play:h5": "npm -C playground run dev:h5",
-    "build:h5": "pnpm build && npm -C playground run build:h5",
+    "build:h5": "npm -C playground run build:h5",
+    "dev:app": "npm -C playground run dev:app",
+    "build:app": "npm -C playground run build:app",
     "play:mp-weixin": "npm -C playground run dev:mp-weixin",
-    "build:mp-weixin": "pnpm build && npm -C playground run build:mp-weixin"
+    "build:mp-weixin": "npm -C playground run build:mp-weixin"
+  },
+  "dependencies": {
+    "unconfig": "^0.3.9"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.5",
@@ -55,6 +61,7 @@
     "typescript": "^5.1.3",
     "unbuild": "^1.2.1",
     "vite": "^4.3.9",
-    "vitest": "^0.32.2"
+    "vitest": "^0.32.2",
+    "vue-tsc": "^1.8.0"
   }
 }
