--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": "true",
-  "packageManager": "pnpm@8.6.2",
+  "packageManager": "pnpm@8.9.2",
   "description": "uni-helper vite plugins for monorepo",
   "author": "Uni-Helper Team <https://github.com/uni-helper>",
   "license": "MIT",
@@ -18,8 +18,8 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
     }
   },
   "main": "./dist/index.cjs",
@@ -34,7 +34,7 @@
     "stub": "pnpm -r --filter=./packages/* --parallel run stub",
     "release": "bumpp package.json packages/**/package.json",
     "lint": "eslint .",
-    "lint:fix": "nr lint --fix",
+    "lint:fix": "pnpm lint --fix",
     "test": "vitest",
     "test:update": "vitest -u",
     "play:h5": "npm -C playground run dev:h5",
@@ -45,23 +45,23 @@
     "build:mp-weixin": "npm -C playground run build:mp-weixin"
   },
   "dependencies": {
-    "unconfig": "^0.3.9"
+    "unconfig": "^0.3.11"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.39.5",
-    "@types/node": "^20.3.1",
+    "@antfu/eslint-config": "1.0.0-beta.27",
+    "@types/node": "^20.8.6",
     "@uni-helper/vite-plugin-uni-pages": "workspace:*",
     "@uni-helper/vite-plugin-uni-router": "workspace:*",
     "@uni-helper/vite-plugin-uni-utils": "workspace:*",
     "@vue/tsconfig": "^0.4.0",
-    "bumpp": "^9.1.1",
-    "eslint": "^8.43.0",
-    "esno": "^0.16.3",
-    "rimraf": "^5.0.1",
-    "typescript": "^5.1.3",
-    "unbuild": "^1.2.1",
-    "vite": "^4.3.9",
-    "vitest": "^0.32.2",
-    "vue-tsc": "^1.8.0"
+    "bumpp": "^9.2.0",
+    "eslint": "^8.51.0",
+    "esno": "^0.17.0",
+    "rimraf": "^5.0.5",
+    "typescript": "^5.2.2",
+    "unbuild": "^2.0.0",
+    "vite": "^4.4.11",
+    "vitest": "^0.34.6",
+    "vue-tsc": "^1.8.19"
   }
 }
