--- a/packages/uni-manifest/package.json
+++ b/packages/uni-manifest/package.json
@@ -17,8 +17,8 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
     }
   },
   "main": "src/index.ts",
@@ -36,7 +36,7 @@
   },
   "dependencies": {
     "chokidar": "^3.5.3",
-    "type-fest": "^3.12.0"
+    "type-fest": "^4.4.0"
   },
   "devDependencies": {
     "@uni-helper/vite-plugin-uni-utils": "workspace:*"
