--- a/packages/uni-utils/package.json
+++ b/packages/uni-utils/package.json
@@ -17,8 +17,8 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
     },
     "./*": "./*"
   },
@@ -37,9 +37,9 @@
   },
   "dependencies": {
     "debug": "^4.3.4",
-    "fast-glob": "^3.2.12"
+    "fast-glob": "^3.3.1"
   },
   "devDependencies": {
-    "@types/debug": "^4.1.8"
+    "@types/debug": "^4.1.9"
   }
 }
